--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -7,6 +7,7 @@
     
     <style name="MyActionBar"
             parent="@android:style/Widget.Holo.Light.ActionBar.Solid.Inverse">
-        <item name="android:background">#600</item>
+        <item name="android:background">@color/orange</item>
+        <item name="android:icon">@android:color/transparent</item>
     </style>
 </resources>
