--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.fnp.appraisetool.MainActivity" >
 
-    <item
+<!--     <item
         android:id="@+id/action_example"
         android:showAsAction="withText|ifRoom"
         android:title="@string/action_example"/>
@@ -11,5 +11,5 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
-
+ -->
 </menu>
