--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -8,6 +8,15 @@
          Per the design guidelines, navigation drawers should be between 240dp and 320dp:
          https://developer.android.com/design/patterns/navigation-drawer.html
     -->
-    <dimen name="navigation_drawer_width">240dp</dimen>
+    <dimen name="navigation_drawer_width">180dp</dimen>
+    
+    <dimen name="title_margin">24dp</dimen>
+
+    <dimen name="block_margin">32dp</dimen>
+    <dimen name="button_height">32dp</dimen>
+    
+    <dimen name="divider_height">1dp</dimen>
+    <dimen name="divider_margin">4dp</dimen>
+    <dimen name="text_padding">8dp</dimen>
 
 </resources>
