--- a/app/src/main/res/layout/fragment_land_dev_appr.xml
+++ b/app/src/main/res/layout/fragment_land_dev_appr.xml
@@ -13,6 +13,11 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin" >
 
+        <!-- Dummy item to prevent EditText from receiving focus -->
+        <LinearLayout
+            android:focusable="true" android:focusableInTouchMode="true"
+            android:layout_width="0px" android:layout_height="0px"/>
+
         <TextView
             android:id="@+id/title"
             android:layout_width="match_parent"
