--- a/app/src/main/res/layout/fragment_land_dev_appr.xml
+++ b/app/src/main/res/layout/fragment_land_dev_appr.xml
@@ -148,7 +148,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
-                android:inputType="numberDecimal" />
+                android:inputType="numberDecimal"
+                android:hint="@string/elec_equipment_hint"/>
         </LinearLayout>
 
         <LinearLayout
@@ -186,7 +187,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
-                android:inputType="numberDecimal" />
+                android:inputType="numberDecimal"
+                android:hint="@string/floor_area_rate_hint"/>
         </LinearLayout>
 
         <LinearLayout
