--- a/app/src/main/res/layout/fragment_land_dev_appr.xml
+++ b/app/src/main/res/layout/fragment_land_dev_appr.xml
@@ -320,6 +320,25 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:text="@string/common_loading" />
+
+            <EditText
+                android:id="@+id/common_loading"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:inputType="numberDecimal" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:paddingBottom="@dimen/text_padding"
             android:paddingTop="@dimen/text_padding" >
